# wasmtime

./: .gitmodules  Cargo.toml
cranelift-codegen/meta/src/: gen_listing.rs
cranelift/assembler-x64/: Cargo.toml
cranelift/assembler-x64/fuzz/: Cargo.toml
cranelift/assembler-x64/meta/src/generate/: operand.rs
cranelift/assembler-x64/src/: lib.rs  reg.rs
cranelift/assembler/meta/src/: generate.rs
cranelift/assembler/src/: lib.rs  reg.rs
cranelift/codegen/meta/src/isa/x86/: encodings.rs  opcodes.rs
cranelift/codegen/meta/src/shared/: instructions.rs
cranelift/codegen/src/: postopt.rs
cranelift/codegen/src/isa/x64/: inst.isle  lower.rs  pcc.rs
cranelift/codegen/src/isa/x64/inst/: mod.rs
cranelift/codegen/src/isa/x64/lower/: isle.rs
cranelift/preopt/: Cargo.toml
cranelift/preopt/src/: lib.rs
cranelift/wasm/src/: code_translator.rs  heap.rs
crates/bench-api/src/: lib.rs
crates/cli-flags/src/: lib.rs
crates/cranelift/src/: func_environ.rs
crates/cranelift/src/compiler/: component.rs
crates/environ/src/: component.rs  fact.rs  module.rs  module_environ.rs  tunables.rs
crates/environ/src/component/: dfg.rs  info.rs  translate.rs
crates/environ/src/component/translate/: inline.rs
crates/fuzzing/src/generators/: stacks.rs  table_ops.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: component.rs  lib.rs  libcalls.rs  memory.rs  mmap.rs  mpk.rs
crates/runtime/src/component/: libcalls.rs
crates/runtime/src/instance/: allocator.rs
crates/runtime/src/instance/allocator/: on_demand.rs  pooling.rs
crates/runtime/src/instance/allocator/pooling/: index_allocator.rs  memory_pool.rs
crates/runtime/src/mpk/: enabled.rs
crates/wasi-common/cap-std-sync/src/: dir.rs  file.rs  lib.rs  net.rs  stdio.rs
crates/wasi-common/cap-std-sync/src/sched/: unix.rs
crates/wasi-common/src/: ctx.rs  dir.rs  file.rs  pipe.rs  sched.rs
crates/wasi-common/src/sched/: subscription.rs
crates/wasi-common/src/snapshots/: preview_0.rs  preview_1.rs
crates/wasi-nn/: Cargo.toml  README.md  build.rs
crates/wasi-nn/src/: ctx.rs  impl.rs  lib.rs  testing.rs  tf.rs  types.rs  wit.rs  witx.rs
crates/wasi-nn/src/backend/: mod.rs  onnxruntime.rs  openvino.rs
crates/wasi-nn/src/registry/: in_memory.rs  mod.rs
crates/wasi-nn/tests/: all.rs  classification.rs  e2e.rs  generated.rs  main.rs
crates/wasi-nn/tests/example/: Cargo.toml  README.md
crates/wasi-nn/tests/example/src/: main.rs
crates/wasi-nn/tests/fixture/: README.md  tensor-1x3x300x300-f32.bgr
crates/wasi-nn/wit/: wasi-nn.wit
crates/wasi-parallel/: Cargo.toml  build.rs
crates/wasi-parallel/examples/: attach-spirv.rs
crates/wasi-parallel/spec/: wasi_ephemeral_parallel.witx
crates/wasi-parallel/src/: context.rs  impl.rs  lib.rs  witx.rs
crates/wasi-parallel/src/device/: cpu.rs  cpu_single_threaded.rs  mod.rs
crates/wasi-parallel/tests/: cli.rs  wasm.rs
crates/wasi-parallel/tests/wat/: parallel-for-kernel.wat  parallel-for.wat
crates/wasi-parallel/tools/: wasm-bundle.py
crates/wasi-preview1-component-adapter/: Cargo.toml
crates/wasi-preview1-component-adapter/src/: lib.rs
crates/wasi-threads/: Cargo.toml
crates/wasi-threads/src/: lib.rs
crates/wasi/src/: lib.rs
crates/wasmtime/src/: config.rs  engine.rs  instance.rs  memory.rs  store.rs  trampoline.rs  types.rs
crates/wasmtime/src/engine/: serialization.rs
crates/wasmtime/src/runtime/: coredump.rs  store.rs
crates/wasmtime/src/trampoline/: memory.rs
crates/wiggle/generate/src/: wasmtime.rs
crates/wiggle/src/: lib.rs
examples/: mpk.rs
filetests/isa/x86/: simd-load-binemit.clif
fuzz/: Cargo.toml
src/: lib.rs  wasmtime.rs
src/commands/: run.rs
supply-chain/: audits.toml  config.toml
tests/all/: async_functions.rs  cli_tests.rs  limits.rs  main.rs  memory.rs  pooling_allocator.rs  threads.rs  wast.rs
tests/all/shared-everything-threads/: simple.wat
wasmtime-environ/src/: cranelift.rs
wasmtime-jit/src/: compiler.rs  context.rs
