[package]
name = "wasmtime-wasi-nn"
version = "0.1.0"
authors = ["The Cranelift Project Developers"]
description = "Wasmtime implementation of the wasi-nn API"
documentation = "https://docs.rs/wasmtime-wasi-nn"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural network"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = "1.0"
log = { version = "0.4.8", default-features = false }
wasmtime = { path = "../wasmtime", version = "0.20.0", default-features = false }
wasmtime-runtime = { path = "../runtime", version = "0.20.0" }
wasmtime-wiggle = { path = "../wiggle/wasmtime", version = "0.20.0" }
wasmtime-wasi = { path = "../wasi", version = "0.20.0" }
wiggle = { path = "../wiggle", version = "0.20.0" }

# These dependencies are necessary for the wasi-nn implementation:
openvino = { path = "../../../openvino-rs/crates/openvino", version = "*" }
thiserror = "1.0.20"

[badges]
maintenance = { status = "experimental" }
