[package]
name = "wasmtime-wasi-nn"
version.workspace = true
authors.workspace = true
description = "Wasmtime implementation of the wasi-nn API"
documentation = "https://docs.rs/wasmtime-wasi-nn"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural-network"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[dependencies]
# These dependencies are necessary for the WITX-generation macros to work:
anyhow = { workspace = true }
wiggle = { workspace = true, features = ["wasmtime"] }

# This dependency is necessary for the WIT-generation macros to work:
wasmtime = { workspace = true, features = ["component-model", "runtime"] }

# These dependencies are necessary for the wasi-nn implementation:
tracing = { workspace = true }
openvino = { version = "0.6.0", features = ["runtime-linking"] }
thiserror = { workspace = true }
ort = { version = "2.0.0-rc.0", default-features = false, features = ["copy-dylibs", "download-binaries"]}
lazy_static = { version = "1.4" }
bytes = { version = "1.5" }

[build-dependencies]
walkdir = { workspace = true }

[dev-dependencies]
cap-std = { workspace = true }
test-programs-artifacts = { workspace = true }
wasi-common = { workspace = true, features = ["sync"] }
wasmtime-wasi = { workspace = true, features = ["preview2"] }
wasmtime = { workspace = true, features = ["cranelift"] }
