[package]
name = "wasmtime-wasi-parallel"
version = "2.0.0"
authors = ["The Wasmtime Project Developers"]
description = "Wasmtime implementation of the wasi-parallel API"
documentation = "https://docs.rs/wasmtime-wasi-parallel"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "parallel"]
keywords = ["webassembly", "wasm", "parallel"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = "1.0"
log = { version = "0.4", default-features = false }
wasmtime = { path = "../wasmtime", version = "2.0.0", default-features = false }
wasmtime-runtime = { path = "../runtime", version = "2.0.0" }
wasmtime-wasi = { path = "../wasi", version = "2.0.0" }
wiggle = { path = "../wiggle", version = "2.0.0" }

# These dependencies are necessary for the wasi-parallel implementation:
indexmap = "1.6"
num_cpus = "1.13"
pretty_env_logger = "0.4"
rand = "0.8"
scoped_threadpool = "0.1"
threadpool = "1.8"
wasmparser = "0.88"
ocl-core = { version = "0.11", optional = true, features=["opencl_version_2_1"] }

# These dependencies are needed for the examples:
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"
wasmtime-cli = { path = "../..", version = "2.0.0", features = ["wasi-parallel"] }
wasm-encoder = "0.15"
wat = "1.0"

[build-dependencies]
walkdir = "2.3"
wasm-encoder = "*"
wat = "*"

[features]
opencl = ["ocl-core"]

[[bench]]
name = "nstream"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "nstream_cpp"
harness = false

